# mijn-host-ddns

./: Cargo.toml  Containerfile  README.md  example-config.toml
.github/workflows/: build-container-image.yml
src/: ddns.rs  main.rs  mijnhost.rs
